Fixed CSS inspector issue with z-index were sometimes is overlapped by content data. Now is set to 1

--- a/core/section/css/section.less
+++ b/core/section/css/section.less
@@ -54,7 +54,7 @@
 			position: fixed;
 			// top: @top_distance;
 			left: calc(100vw - @inspector_width - 0.75rem);
-
+			z-index: 1;
 
 			// prevent content from shifting left when the vertical scrollbar appears
 			overflow-y: overlay;
